addSearchSwagger/fixImportSearch
